Serializable Parse Cache